<resources>
    <string name="app_name">ProjectTestWebmaps</string>

    <string name="user">Usuario: </string>
    <string name="password">Contraseña: </string>
    <string name="email">Correo electrónico</string>
    <string name="login">Iniciar sesión</string>
    <string name="login_forgot_password">Olvidé mi contraseña</string>
    <string name="login_create_account">Crear cuenta</string>
    <string name="recover_password">Recuperar contraseña</string>
    <string name="reset_password">Restablecer contraseña</string>
    <string name="go_login">Regresar al inicio de sesión</string>
    <string name="login_sign_up">Registrarse</string>
    <string name="login_you_sign_up">Regístrate</string>
    <string name="login_sign_up_password">Contraseña</string>
    <string name="login_sign_up_password_confirm">Confirmar contraseña</string>

    <string name="welcome_to_webmaps">Hola, te damos la Bienvenida a WebMaps</string>
    <string name="create_db">Crear Base de datos</string>
    
    <string name="user_registration">Usuario</string>
    <string name="country">Pais</string>
    <string name="state">Estado</string>
    <string name="gender">Genero</string>

    <string name="search_country">Buscar pais</string>

    <string name="log_out">Cerrar sesion</string>

</resources>