<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:paddingVertical="16dp"
        android:text="@string/welcome_to_webmaps"
        android:textStyle="bold"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:paddingHorizontal="24dp"
            android:text="@string/user_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:paddingHorizontal="24dp"
            android:text="@string/country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:paddingHorizontal="24dp"
            android:text="@string/state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:paddingHorizontal="24dp"
            android:text="@string/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:paddingVertical="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvRegistros"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>