<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".view.ForgotPasswordActivity">

    <TextView
        android:text="@string/recover_password"
        android:padding="32dp"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="vertical"
        android:paddingVertical="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/etEmail"
            android:padding="16dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnRecoverPassword"
            android:padding="16dp"
            android:layout_gravity="center"
            android:text="@string/reset_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/btnGoLogIn"
        android:padding="16dp"
        android:text="@string/go_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>